Ajout de materialized

--- a/CarnetSanitaire.Web.UI/appsettings.json
+++ b/CarnetSanitaire.Web.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-CarnetSanitaire.Web.UI-00CA18B1-26BB-4DB8-881C-7A83816AC211;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=Localhost/sqlexpress;Database=CarnetSanitaire;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
