--- a/CarnetSanitaire.Web.UI/CarnetSanitaire.Web.UI.csproj
+++ b/CarnetSanitaire.Web.UI/CarnetSanitaire.Web.UI.csproj
@@ -13,4 +13,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
