--- a/CarnetSanitaire.Web.UI/appsettings.json
+++ b/CarnetSanitaire.Web.UI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=Localhost/sqlexpress;Database=CarnetSanitaire;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database=CarnetSanitaire;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
