--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,6 @@
 # ignore SMTP Identification class
 *SmtpIdentification.cs
 
-/CarnetSanitaire.Web.UI/bin/*
-/CarnetSanitaire.Web.UI/obj/*
-/CarnetSanitaire.Web.UI/Migrations/*
+CarnetSanitaire.Web.UI/bin/*
+CarnetSanitaire.Web.UI/obj/*
+CarnetSanitaire.Web.UI/Migrations/*
