Ajout de la library YubicoDotNetClient

--- a/CarnetSanitaire.Web.UI/appsettings.json
+++ b/CarnetSanitaire.Web.UI/appsettings.json
@@ -1,7 +1,9 @@
 {
   "https_port": 443,
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost\\sqlexpress;Database=CarnetSanitaire;Trusted_Connection=True;"
+    //Utilisation du parametre MultipleActiveResultSets=true; pour le multithred en bdd
+    "DefaultConnection": "Server=localhost\\sqlexpress;Database=CarnetSanitaire;Trusted_Connection=True;MultipleActiveResultSets=true;"
+
   },
   "Logging": {
     "LogLevel": {
