--- a/CarnetSanitaire.Web.UI/CarnetSanitaire.Web.UI.csproj
+++ b/CarnetSanitaire.Web.UI/CarnetSanitaire.Web.UI.csproj
@@ -17,6 +17,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.2" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
+    <PackageReference Include="YubicoDotNetClient" Version="1.2.0" />
   </ItemGroup>
 
   <ItemGroup>
